# COMP6925-Project

./: Readme.md  index.html
.github/workflows/: marimo.yml
Q1/: main.jl
Q2/: Lens Data.xlsx  notebook.py  pyproject.toml  requirements.txt
Q2/output_dir/: index.html
