[project]
name = "q2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "pulp>=3.3.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]
